--- a/style.css
+++ b/style.css
@@ -55,8 +55,6 @@ a {
 body {
     font-family: var(--ff-primary);
     color: var(--clr-gray); 
-    padding: 1em;
-
 }
 
 .btn {
@@ -81,6 +79,12 @@ body {
 nav {
     display: flex;
     justify-content: space-between;
+    padding: 1em;
+
+}
+
+.intro {
+    padding: 0 1em;
 }
 
 .intro-header {
@@ -91,12 +95,70 @@ nav {
     margin-bottom: 0.625em;
 }
 
-.body {
+.hero-image {
+    max-width: 100%;
+}
+
+.text-body {
     font-size: 1rem;
     line-height: 1.625em;
     margin-bottom: 1.5em;
+    font-weight: var(--fw-medium);
 }
 
-.hero-image {
-    margin-bottom: 4.125em;
+.courses {
+    background-image: var(--lg-background);
+    padding: 0 1em 2.5em 1em;
+}
+
+.card {
+    background-color: var(--clr-white);
+    margin-bottom: 2.5em;
+    padding: 3.5em 1.75em 2em 1.75em;
+    border-radius: 0.625em;
+    box-shadow: 0px 25px 50px 0px hsla(233, 92%, 29%, 0.04);
+    position: relative;
+}
+
+.icon {
+    position: absolute;
+    left: 10;
+    top: -10%;
+}
+
+.card h3 {
+    font-weight: var(--fw-extrabold);
+    color: var(--clr-navy);
+    font-size: 1.25em;
+    line-height: 1.125em;
+    margin-bottom: 0.825em;
+}
+
+.text-link {
+    color: var(--clr-coral);
+    font-weight: var(--fw-bold);
+    font-size: 1.125em;
+    line-height: 1.125em;
+}
+
+.card:first-child {
+    background-image: var(--lg-sunrise);
+    padding: 1.5em;
+    color: var(--clr-white);
+    font-weight: var(--fw-extrabold);
+    font-size: 1.5em;
+}
+
+.card:last-child {
+    margin-bottom: 0;
+}
+
+footer {
+    background-color: var(--clr-navy);
+}
+
+.footer-nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 2em 1em;
 }
