--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ body {
     display: inline-block;
 }
 
+.btn:hover {
+    background-color: var(--clr-slate);
+}
+
 .btn-sunrise {
     background-image: var(--lg-sunrise);
     padding: 1em 2em;
@@ -74,6 +78,11 @@ body {
 
 .btn-sunset {
     background-image: var(--lg-sunset);
+}
+
+.btn-sunrise:hover,
+.btn-sunset:hover {
+    box-shadow: inset 0 0 0 1000px #ffffff80;
 }
 
 nav {
@@ -211,7 +220,7 @@ footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-auto-flow: 1fr;
-        column-gap: 1.6em;
+        column-gap: 1em;
         row-gap: 3em;
     }
 }
